plugins/kotlin/j2k/shared/tests/testData/newJ2k/invalidCode/absentArgument.k1.kt
// ERROR: Type mismatch: inferred type is J but Unit was expected
class J(x: Int, y: Int) {
    fun foo() {
        return J(0, TODO("Cannot convert element"))
    }
}
